runFormatTest(import.meta, ["angular"], { bracketSameLine: true });
runFormatTest(import.meta, ["angular"], { bracketSameLine: false });
